--- a/src/pages/menuteacher/menuteacher.html
+++ b/src/pages/menuteacher/menuteacher.html
@@ -52,7 +52,9 @@
           <p>ข้อมูลเด็ก อนุบาล1</p>
           <button ion-button clear item-end>View</button>
         </ion-item>
-
-
   </ion-list>
+
+  <button ion-button block (click)="clearst()">Logout</button>
+
+
 </ion-content>
