--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -15,7 +15,8 @@
 <h1>Welcome Kid@Preschool</h1>
 <div>Kid@Preschool For Teacher&Parent</div>
 
-  <button ion-button block color="beer" class="marginTop" (click)="login()">Login For Teacher</button>
+  <button ion-button block color="beer" id="login" class="marginTop" (click)="login()">Login For Teacher</button>
+
   <button ion-button block color="beer" class="marginTop" (click)="test()">Login For Parent</button>
 
 
