--- a/src/pages/checkstudy/checkstudy.html
+++ b/src/pages/checkstudy/checkstudy.html
@@ -12,11 +12,27 @@
 
 <ion-content padding id="checkstudent">
 
-
-  <ion-item *ngFor="let item of studentcheck">
-    <ion-label>{{item.student_title}}{{item.student_name}}
-      {{item.student_surname}}</ion-label>
-    <ion-checkbox color="dark" checked="isChecked"></ion-checkbox>
+  <ion-item>
+    <ion-label>เช็คการเข้าเรียนประจำวันที่</ion-label>
+    <ion-datetime displayFormat="DD/MMMM/YYYY" [(ngModel)]="ac_date"></ion-datetime>
   </ion-item>
+
+    
+  <ion-item>
+    <ion-label>ปีการศึกษา</ion-label>
+    <ion-select [(ngModel)]="term_id" multiple="true" >
+      <ion-option *ngFor="let term of term" value="{{term.term_id}}" >{{term.term_num}}/{{term.term_years}}</ion-option>
+    </ion-select>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>เลือกนักเรียน</ion-label>
+    <ion-select [(ngModel)]="student_id" multiple="true" >
+      <ion-option *ngFor="let item of student" value="{{item.student_id}}" >{{item.student_name}} {{item.student_surname}}</ion-option>
+    </ion-select>
+  </ion-item>
+
+  <button ion-button (click)="postJson(ac_date,student_id,term_id)">บันทึก</button>
+
 
 </ion-content>
