--- a/src/pages/menuteachertwo/menuteachertwo.html
+++ b/src/pages/menuteachertwo/menuteachertwo.html
@@ -54,4 +54,7 @@
             <button ion-button clear item-end>View</button>
           </ion-item>
     </ion-list>
+
+    <button ion-button block (click)="clearst()">Logout</button>
+
 </ion-content>
